--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
 	<head>
-		<title>Uraniborg</title>
+		<title>www.einstein.gr</title>
 		<link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -12,7 +12,7 @@
 			{% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
-			<h1><a href="/">Physics applications in Python</a></h1>
+			<h1><a href="/">Scientific applications in Python</a></h1>
 		</div>
 		<div class="content container">
 			<div class="row">
