--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,12 @@
 		{% if user.is_authenticated %}
 			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 		{% endif %}
-		<h1>{{ post.title }}</h1>
+		<h2>{{ post.title }}</h2>
+		{% if post.title == "Physics -> Instability Strip Live Graph" %}
+			<h5>Note: Use Firefox, Chrome or Opera as web browsers for viewing the live graphs.</h5>
+			{% include 'blog/inst_strip.html' %}
+			{% include 'blog/hr_full.html' %}
+		{% endif %}
 		<p>{{ post.text|linebreaks }}</p>
 		{% if post.published_date %}
 		<div class="date">
