--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,11 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+<h5>Developer: Sotirios Ilias Tsivras - so.tsivras@gmail.com</h5>
+<h5>Note: Use Firefox, Chrome or Opera as web browsers for viewing the live graphs</h5>
 	{% for post in posts %}
 		<div class="post">
-			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-			<p>{{ post.text|linebreaks }}</p>
+			<h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+			<p align="justify">{{ post.text|linebreaks }}</p>
 			<div class="date">
 				<p>published: {{ post.published_date }}</p>
 			</div>
