--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5{
 	color: #000000;
 }
 
-.post p {
+.post p , li{
 	text-align: justify;
 	font-family: 'Bookman Old Style';
 }
@@ -79,6 +79,7 @@ if it's not present, don't show loader */
 .code , .pre{
 	background-color: #99ccff;
 	font-family: 'Terminal', cursive;
+	font-size='1';
 	text-align: left;
 }
 
