--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,6 +16,11 @@
 			<h5>Note: Use Firefox, Chrome or Opera as web browsers for viewing the live graphs.</h5>
 			{% include 'blog/turtle_1.html' %}
 		{% endif %}
+		{% if post.title == "Physics -> Import data from websites to Matplotlib" %}
+			{% include 'blog/loading.html' %}
+			<h5>Note: Use Firefox, Chrome or Opera as web browsers for viewing the live graphs.</h5>
+			{% include 'blog/inst_strip_table.html' %}
+		{% endif %}
 		<p>{{ post.text|linebreaks }}</p>
 		{% if post.published_date %}
 		<div class="date">
