Instability Strip Table Added v1.1...

--- a/blog/templates/blog/inst_strip_table.html
+++ b/blog/templates/blog/inst_strip_table.html
@@ -163,7 +163,7 @@
 			</pre>
 			<p>Open a cmd, go to the file where the django project is located, and run the server (>python_manage.py_runserver).
 				Open your web broswer and go to the link http://127.0.0.1:8000/mplimage where your webpage is located. 
-				You should be able to see the image given at the top of the current webpage.</p>
+				You should be able to see the image given at the top of the current webpage.<br><br><u>To sum up</u></p>
 		</div>
 	</body>
 </html>
