Variable Stars Table v 1.3...

--- a/blog/templates/blog/inst_strip_table.html
+++ b/blog/templates/blog/inst_strip_table.html
@@ -13,7 +13,7 @@
 	<th>Star</th>
 	<th>Constellation</th>
 	<th>Type</th>
-	<th>Magnitude Range</th>
+	<th>Magnitude Variation</th>
 	<th>Period (days)</th>
 	</tr>
 	<tr>
